syntax = "proto3";

package nsmconnect;

import "github.com/ligato/networkservicemesh/pkg/nsm/apis/common/common.proto";

// ConnectionRequest is sent by a NSM client to build a connection.
message ConnectionRequest {
// Since connection request will trigger certain actions
// executed by NSM for a client to address idempotency, request_id
// will be tracked.
    string request_id = 1;
    string network_service_name = 2;
    string linux_namespace = 3;
    repeated common.LocalMechanism interface = 4;
}

message ConnectionParameters {
    map <string,string> connection_parameters = 1;
}

// ConnectionReply is sent back by NSM as a reply to ConnectionRequest
// accepted true will indicate that the connection is accepted, otherwise false
// indicates that connection was refused and admission_error will provide details
// why connection was refused.
message ConnectionReply {
    bool accepted = 1;
    string admission_error = 2;
    ConnectionParameters connection_parameters = 3;
    common.LocalMechanism interface = 4;
}

service ClientConnection {
    rpc RequestConnection (ConnectionRequest) returns (ConnectionReply);
}
